css: fix long blacklists not truncating in sidebar.
* https://danbooru.donmai.us/forum_topics/9127?page=281#forum_post_160147
* https://css-tricks.com/flexbox-truncated-text

--- a/app/javascript/src/styles/common/main_layout.scss
+++ b/app/javascript/src/styles/common/main_layout.scss
@@ -36,7 +36,8 @@ footer#page-footer {
   display: flex;
 
   #sidebar {
-    flex-basis: 15em;
+    flex: 0;
+    min-width: 15em;
   }
 
   #content {
